fixing issue where timeline content was unreadable

--- a/cu_content_sequence/css/cu-content-sequence.css
+++ b/cu_content_sequence/css/cu-content-sequence.css
@@ -1,11 +1,14 @@
 .timeline-list-link { padding: 20px; text-align: center; }
 
+.adv-timeline-list { background: #fff; color: #202020; padding: 10px; }
+.adv-timeline-list a:link, .adv-timeline-list a:visited { color: #007bc8; }
+
 .adv-timeline-wrapper { display: flex; flex-direction: column-reverse; }
 .adv-timeline-wrapper .tl-text .tl-headline-date, .adv-timeline-wrapper .tl-text h3.tl-headline-date { color: #757575; }
 
 .timeline-item-top { display: flex; flex-direction: column-reverse; }
 
-.adv-timeline-list { max-width: 800px; margin: 0 auto; display: none; }
+.adv-timeline-list { margin: 0 auto; display: none; }
 .adv-timeline-list ol.timeline-event-list, .adv-timeline-list ol.timeline-event-list > li { list-style: none; list-style-image: none; }
 .adv-timeline-list .timeline-item { background-color: #fff; margin: 10px 20px 40px 50px; position: relative; clear: both; z-index: 5; -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); transition: -webkit-box-shadow 0.5s ease, background-color 0.5s ease, color 0.5s ease; transition: -moz-box-shadow 0.5s ease, background-color 0.5s ease, color 0.5s ease; transition: box-shadow 0.5s ease, background-color 0.5s ease, color 0.5s ease; }
 .adv-timeline-list .timeline-item img { width: 100%; height: auto; display: block; }
@@ -45,12 +48,15 @@ body .content .adv-timeline-wrapper .tl-slide-content a:hover, body .content .ad
 
 .timeline-list-link { padding: 20px; text-align: center; }
 
+.adv-timeline-list { background: #fff; color: #202020; padding: 10px; }
+.adv-timeline-list a:link, .adv-timeline-list a:visited { color: #007bc8; }
+
 body .block-inner .content .simple-horizontal-timeline-wrapper a:link, body .block-inner .content .simple-horizontal-timeline-wrapper a:visited { color: #007bc8; }
 body .block-inner .content .simple-horizontal-timeline-wrapper a:hover { color: #e51c23; }
 body .block-inner .content .simple-horizontal-timeline-wrapper .cd-horizontal-timeline .events a { color: #383838; }
 body .block-inner .content .simple-horizontal-timeline-wrapper .timeline-content { color: #202020; }
 
-.simple-horizontal-timeline-wrapper { background: #fff; padding-bottom: 40px; position: relative; }
+.simple-horizontal-timeline-wrapper { background: #fff; padding-bottom: 40px; padding-top: 10px; position: relative; }
 .simple-horizontal-timeline-wrapper .timeline-list-link { position: absolute; left: 0; right: 0; bottom: 0; }
 
 .cd-horizontal-timeline { padding-bottom: 20px; }
@@ -88,6 +94,9 @@ body .block-inner .content .simple-horizontal-timeline-wrapper .timeline-content
 .no-touch .cd-timeline-item-navigation a.inactive:hover { border-color: #dfdfdf; }
 
 .timeline-list-link { padding: 20px; text-align: center; }
+
+.adv-timeline-list { background: #fff; color: #202020; padding: 10px; }
+.adv-timeline-list a:link, .adv-timeline-list a:visited { color: #007bc8; }
 
 .cd-vertical-timeline { padding-bottom: 50px; }
 .cd-vertical-timeline ol.vertical-timeline-items, .cd-vertical-timeline ol.vertical-timeline-items > li { list-style: none; list-style-image: none; margin: 0; padding: 0; }
