--- a/cu_content_sequence/scss/components/_advanced.scss
+++ b/cu_content_sequence/scss/components/_advanced.scss
@@ -12,7 +12,7 @@
   flex-direction: column-reverse;
 }
 .adv-timeline-list {
-  max-width: 800px;
+  //max-width: 800px;
   margin: 0 auto;
   display: none;
   ol.timeline-event-list,
